<p> align fixed

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ P {
   font-size: 1.25rem;
   line-height: 1.3rem;
   letter-spacing: 0.0144rem;
-  text-align: justify;
+  text-align: left;
 }
 
 h3 {
